# cdc-contact-tracing-ontology

./: .gitattributes  .gitignore  Contact Tracing Data Generation V2.ipynb  README.md  configuration.yaml  ctt_ontology.owl  generator_main.py  pyproject.toml  test.ipynb
cdc_ctt/definitions/: classes.py  data_properties.py  object_properties.py
cdc_ctt/graph/: generator.py  graph_generator.py  individual_generator.py
ctt_ontology/definitions/: classes.py  data_properties.py  object_properties.py
ctt_ontology/graph/: generator.py
ctt_ontology/util/: config.py
data/: patient_100k_0.owl  patient_100k_1.owl  patient_100k_2.owl  patient_100k_3.owl  patient_100k_4.owl  patient_100k_5.owl  patient_100k_6.owl  patient_100k_7.owl  patient_100k_8.owl  patient_100k_9.owl  patient_10k.owl
