[tool.poetry]
name = "cdc-contact-tracing-ontology"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
owlready2 = "^0.44"
jupyter = "^1.0.0"
faker = "^19.6.1"
alive-progress = "^3.1.4"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
